lab3/roscourse_ws/log/build_2024-02-17_03-49-21/python_turtle/stderr.log
  File "/home/yahboom/S24_RobotProgramming_eloquent/lab3/roscourse_ws/install/python_turtle/lib/python3.8/site-packages/python_turtle/turtlebot_server.py", line 29
    self.turtle_color_srv = self.create_service(SetColor, ’setColor’, self.set_color_callback)
                                                                   ^
SyntaxError: invalid character in identifier

